--- a/index.html
+++ b/index.html
@@ -5,15 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        ol li {
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+
+        ol li:hover {
+            display: block;
+            background: black;
+            
+        }
+
+        ol li a{
+            padding: 10px;
+            color: black;
+            text-decoration: none;
+        }
+
+        ol li a:hover {
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <div class="todo-app">
-            <h2>To-Do List <img src="img/icon.png"/></h2>
-
+        <div class="todo-app" style="padding-top: 10px;">
             <div class="row">
-                <input type="text" id="input-box" placeholder="Add your task"/>
-                <button onclick="addTask()">Add</button>
+                <img src="img/main-image.jpeg" alt="" width="360" style="margin-left: auto; margin-right: auto;">
+            </div>
+            <h2 style="color: black;">If you are on the Chess.com page registered; You can access to my Bibliotec of plays, here: <img src="img/icon.png"/></h2>
+
+            <div class="row" style="padding: 5px 10px 15px  40px !important; font-size: 15px;">
+                <ol style="list-style: none; line-height: 10px;">
+                    <li>
+                        <a href="https://www.chess.com/c/5qitWjAn">Master games in 5 minutes with Jesus</a>
+                    </li>
+                    <li>
+                        <a href="https://www.chess.com/c/2qWT5LMDx">Not common games but won with Jesuschrist help</a>
+                    </li>
+                    <li>
+                        <a href="https://www.chess.com/c/W9z9M6Xx">Well plays - With prayings</a>
+                    </li>
+                    <li>
+                        <a href="https://www.chess.com/c/2mWZgbiSA">Great openings - ALWAYS with Jesus</a>
+                    </li>
+                    <li>
+                        <a href="https://www.chess.com/c/2mWZgbiSA">Great openings - ALWAYS with Jesus</a>
+                    </li>
+                    <li>
+                        <a href="https://www.chess.com/c/2mWZgbiSA">Very nightmare openings to opponents with Jesus</a>
+                    </li>
+                </ol>
             </div>
             <ul id="list-container">
             </ul>
