[U] updates in the app

--- a/index.html
+++ b/index.html
@@ -31,31 +31,16 @@
 <body>
     <div class="container">
         <div class="todo-app" style="padding-top: 10px;">
-            <div class="row">
-                <img src="img/main-image.jpeg" alt="" width="360" style="margin-left: auto; margin-right: auto;">
+            <div class="row" style="justify-content: center;">
+                <iframe width="450" height="315"
+                    src="https://www.youtube.com/embed/TGwlXdNewnM">
+                </iframe>
             </div>
-            <h2 style="color: black;">If you are on the Chess.com page registered; You can access to my Bibliotec of plays, here: <img src="img/icon.png"/></h2>
+            <h2 style="color: black;"> Pray with Jesus by writting your today's doubts <img src="img/icon.png"/></h2>
 
             <div class="row" style="padding: 5px 10px 15px  40px !important; font-size: 15px;">
                 <ol style="list-style: none; line-height: 10px;">
-                    <li>
-                        <a href="https://www.chess.com/c/5qitWjAn">Master games in 5 minutes with Jesus</a>
-                    </li>
-                    <li>
-                        <a href="https://www.chess.com/c/2qWT5LMDx">Not common games but won with Jesuschrist help</a>
-                    </li>
-                    <li>
-                        <a href="https://www.chess.com/c/W9z9M6Xx">Well plays - With prayings</a>
-                    </li>
-                    <li>
-                        <a href="https://www.chess.com/c/2mWZgbiSA">Great openings - ALWAYS with Jesus</a>
-                    </li>
-                    <li>
-                        <a href="https://www.chess.com/c/2mWZgbiSA">Great openings - ALWAYS with Jesus</a>
-                    </li>
-                    <li>
-                        <a href="https://www.chess.com/c/2mWZgbiSA">Very nightmare openings to opponents with Jesus</a>
-                    </li>
+
                 </ol>
             </div>
             <ul id="list-container">
