--- a/index.html
+++ b/index.html
@@ -6,45 +6,62 @@
     <title>Task Manager</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        ol li {
-            padding-top: 10px;
-            padding-bottom: 10px;
+        ul li {
+        list-style: none;
+        font-size: 18px;
+        cursor: pointer;
+        padding: 10px;
         }
 
-        ol li:hover {
-            display: block;
-            background: black;
-            
+        li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background: #edeef0;
+        margin-bottom: 10px;
+        border-radius: 5px;
         }
 
-        ol li a{
-            padding: 10px;
-            color: black;
-            text-decoration: none;
+        h5 {
+        text-align: center;
+        margin-bottom: 10px;
+        color: green;
         }
 
-        ol li a:hover {
-            color: white;
+        .text-controls {
+        width: 25px;
+        height: 25px;
+        padding: 3px;
+        margin-right: 5px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="todo-app" style="padding-top: 10px;">
+        <div class="praying-app" style="padding-top: 10px;">
             <div class="row" style="justify-content: center;">
                 <iframe width="450" height="315"
                     src="https://www.youtube.com/embed/TGwlXdNewnM">
                 </iframe>
             </div>
-            <h2 style="color: black;"> Pray with Jesus by writting your today's doubts <img src="img/icon.png"/></h2>
+            <h2 style="color: black;"> Pray with Jesus by writting your today's doubts:<img src="img/icon.png" style="width: 30px;"/></h2>
 
-            <div class="row" style="padding: 5px 10px 15px  40px !important; font-size: 15px;">
-                <ol style="list-style: none; line-height: 10px;">
-
-                </ol>
-            </div>
-            <ul id="list-container">
-            </ul>
+            <div class="text-body">
+                <input
+                    type="text"
+                    id="textText"
+                    class="text-input"
+                    placeholder="Add your items"
+                />
+                <img
+                    src="./img/praying_icon.jpeg"
+                    alt="+"
+                    id="AddUpdateClick"
+                    onclick="CreateQuestionsItems();"
+                />
+                </div>
+            <h5 id="Alert"></h5>
+            <ul id="list-items" class="list-items"></ul>
         </div>
     </div>
     <script src="script.js"></script>
