--- a/index.html
+++ b/index.html
@@ -1,69 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager</title>
+    <title>Fast prayings app</title>
     <link rel="stylesheet" href="style.css">
     <style>
         ul li {
-        list-style: none;
-        font-size: 18px;
-        cursor: pointer;
-        padding: 10px;
+            list-style: none;
+            font-size: 18px;
+            cursor: pointer;
+            padding: 10px;
         }
 
         li {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background: #edeef0;
-        margin-bottom: 10px;
-        border-radius: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: #edeef0;
+            margin-bottom: 10px;
+            border-radius: 5px;
         }
 
         h5 {
-        text-align: center;
-        margin-bottom: 10px;
-        color: green;
+            text-align: center;
+            margin-bottom: 10px;
+            color: green;
         }
 
         .text-controls {
-        width: 25px;
-        height: 25px;
-        padding: 3px;
-        margin-right: 5px;
+            width: 25px;
+            height: 25px;
+            padding: 3px;
+            margin-right: 5px;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="praying-app" style="padding-top: 10px;">
-            <div class="row" style="justify-content: center;">
-                <iframe width="450" height="315"
-                    src="https://www.youtube.com/embed/TGwlXdNewnM">
+            <div class="row" style="justify-content: center;" id="praying-frame">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/TGwlXdNewnM">
                 </iframe>
             </div>
-            <h2 style="color: black;"> Pray with Jesus by writting your today's doubts:<img src="img/icon.png" style="width: 30px;"/></h2>
+            <h2 style="color: black;"> Pray with Jesus by writting your today's doubts:<img src="img/icon.png"
+                    style="width: 30px;" /></h2>
 
             <div class="text-body">
-                <input
-                    type="text"
-                    id="textText"
-                    class="text-input"
-                    placeholder="Add your items"
-                />
-                <img
-                    src="./img/praying_icon.jpeg"
-                    alt="+"
-                    id="AddUpdateClick"
-                    onclick="CreateQuestionsItems();"
-                />
-                </div>
+                <input type="text" id="textText" class="text-input" placeholder="Add your items" />
+                <img src="./img/praying_icon.jpeg" alt="+" id="AddUpdateClick" onclick="CreateQuestionsItems();" />
+            </div>
             <h5 id="Alert"></h5>
             <ul id="list-items" class="list-items"></ul>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
